# tree-benchmark

./: .gitignore  README.md
go/: go.mod  go.sum  main.go
rust/: Cargo.toml
rust/src/: db.rs
src/: lib.rs
