[package]
name    = "tree-benchmark"
version = "0.0.0"
authors = ["Larry Lyu <gm@larry.engineer>"]
edition = "2021"
publish = false

[dependencies]
cosmwasm-std  = "1.4"
hex           = "0.4"
merk          = { git = "https://github.com/turbofish-org/merk.git", rev = "088e2bb" }
rand          = "0.8"
random-string = "1"
rocksdb       = "0.21"
serde_json    = "1"
tree          = { git = "https://github.com/larry0x/tree.git", rev = "a5ea107" }
